--- a/public/stylesheets/sass/pages/home.scss
+++ b/public/stylesheets/sass/pages/home.scss
@@ -20,6 +20,9 @@
       width: 385px; 
       margin-bottom: 40px;
       margin-top: 20px;
+      .body {
+        padding-bottom: 10px;
+      }
     }
     #featured-video .body {
       padding: 5px;
