all pages have 30px bottom padding

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -601,6 +601,8 @@ h4 {
 .site-container {
   width: 960px;
   margin: 0px auto; }
+  .site-container#main-content {
+    padding-bottom: 30px; }
 
 .snug-bottom {
   margin-bottom: 0px !important; }
