--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -46,13 +46,13 @@
           %h3 Featured Musicians:
           %ul.inline-list
             %li
-              %a.box{:href => '#'} Tea Lounge, Brooklyn
+              %a.box{:href => '#'} Pete Robbins (alto saxophone)
             %li
-              %a.box{:href => '#'} Tea Lounge, Brooklyn
+              %a.box{:href => '#'} Mikkel Ploug (guitar)
             %li
-              %a.box{:href => '#'} Tea Lounge, Brooklyn
+              %a.box{:href => '#'} Simon Jermyn (bass)
             %li.last
-              %a.box{:href => '#'} Tea Lounge, Brooklyn
+              %a.box{:href => '#'} Kevin Brow (drums)
           %h3 About This Show
           %p This quartet tours Europe extensively, playing a mix of my older and newer pieces. Compared to siLENT Z, the focus is less on timbre and semi-structured improvisation and more on exploring the details of the harmonic and rhythmic elements of the compositions in a clear and convincing manner. A live album may be coming in 2011... stay tuned...
 .clear
