adds top padding to featured musicians header

--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -43,7 +43,7 @@
         .body
           %a.box.dark{:href => '#'} SILENT Z
           %a.box{:href => '#'} Tea Lounge, Brooklyn
-          %h3 Featured Musicians:
+          %h3#featured-musicians-title Featured Musicians:
           %ul.inline-list
             %li
               %a.box{:href => '#'} Pete Robbins (alto saxophone)
