--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -317,6 +317,17 @@
 
 .jazz.page-shows h3#featured-musicians-title {
   margin-top: 5px; }
+.jazz.page-shows .show-listing a.band,
+.jazz.page-shows .show-listing a.venue,
+.jazz.page-shows .show-listing p.date {
+  float: left; }
+.jazz.page-shows .show-listing a.band {
+  margin-right: 6px; }
+.jazz.page-shows .show-listing a.venue {
+  margin-right: 4px; }
+.jazz.page-shows .show-listing p.date {
+  margin-bottom: 0px;
+  margin-top: 3px; }
 
 .jazz.page-donate .masthead-top {
   background-image: url(/images/titles/donate_title.png); }
