--- a/public/stylesheets/pages/resources.css
+++ b/public/stylesheets/pages/resources.css
@@ -1,2 +1,4 @@
 .jazz.page-resources .masthead-top {
   background-image: url(/images/titles/resources_title.png); }
+.jazz.page-resources .masthead {
+  background: url(/images/masthead_bg/resources.png) repeat-x; }
