--- a/public/stylesheets/pages/venues.css
+++ b/public/stylesheets/pages/venues.css
@@ -1,2 +1,4 @@
 .jazz.section-venues .masthead-top {
   background-image: url(/images/titles/venues_title.png); }
+.jazz.section-venues .masthead {
+  background: url(/images/masthead_bg/venues.png) repeat-x; }
