--- a/public/stylesheets/sass/pages/about.scss
+++ b/public/stylesheets/sass/pages/about.scss
@@ -3,6 +3,9 @@
     .masthead-top {
        background-image: url(/images/titles/about_title.png);
     }
+    .masthead {
+      background: url(/images/masthead_bg/about.png) repeat-x;
+    }
     #recent-press {
       .byline {
         margin-bottom: 2px;
