--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -4,6 +4,9 @@
        background-image: url(/images/titles/artists_title.png);
        background-position: 64px 5px;
     }
+    .masthead {
+      background: url(/images/masthead_bg/artists.png) repeat-x;
+    }
     &.page-index {
 
     }
