--- a/public/stylesheets/sass/pages/donate.scss
+++ b/public/stylesheets/sass/pages/donate.scss
@@ -3,6 +3,9 @@
     .masthead-top {
        background-image: url(/images/titles/donate_title.png);
     }
+    .masthead {
+      background: url(/images/masthead_bg/donate.png) repeat-x;
+    }
     #main-content {
       height: 543px;
       background: url(/images/rats.png) no-repeat top left;
