--- a/public/stylesheets/sass/pages/resources.scss
+++ b/public/stylesheets/sass/pages/resources.scss
@@ -3,5 +3,8 @@
     .masthead-top {
        background-image: url(/images/titles/resources_title.png);
     }
+    .masthead {
+      background: url(/images/masthead_bg/resources.png) repeat-x;
+    }
   }
 }
