--- a/public/stylesheets/sass/pages/venues.scss
+++ b/public/stylesheets/sass/pages/venues.scss
@@ -3,5 +3,8 @@
     .masthead-top {
        background-image: url(/images/titles/venues_title.png);
     }
+    .masthead {
+      background: url(/images/masthead_bg/venues.png) repeat-x;
+    }
   }
 }
