--- a/public/stylesheets/pages/about.css
+++ b/public/stylesheets/pages/about.css
@@ -1,5 +1,7 @@
 .jazz.page-about .masthead-top {
   background-image: url(/images/titles/about_title.png); }
+.jazz.page-about .masthead {
+  background: url(/images/masthead_bg/about.png) repeat-x; }
 .jazz.page-about #recent-press .byline {
   margin-bottom: 2px; }
   .jazz.page-about #recent-press .byline .date {
