--- a/public/stylesheets/pages/video.css
+++ b/public/stylesheets/pages/video.css
@@ -1,2 +1,4 @@
 .jazz.section-video .masthead-top {
   background-image: url(/images/titles/video_title.png); }
+.jazz.section-video .masthead {
+  background: url(/images/masthead_bg/videos.png) repeat-x; }
