--- a/public/stylesheets/sass/pages/video.scss
+++ b/public/stylesheets/sass/pages/video.scss
@@ -3,5 +3,8 @@
     .masthead-top {
        background-image: url(/images/titles/video_title.png);
     }
+    .masthead {
+      background: url(/images/masthead_bg/videos.png) repeat-x;
+    }
   }
 }
