--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -71,7 +71,7 @@
 .col-2
   .section
     .container
-      .body#video-player-container
+      .body#video_player_container
         - if @selected_video
           :plain
             #{@selected_video.embed_code}
@@ -83,10 +83,10 @@
 
           -# TODO
           -# should probably load this asynchronously after page load
-          - if @selected_video.related_videos.present?
+          - if @selected_video.show.videos.count > 1
             %h3 More Videos from this Show
             %ul#related_videos.inline-list
-              - @selected_video.related_videos.each do |video|
+              - @selected_video.show.videos.each do |video|
                 %li.container
                   %a.block{:href => video.url, :data => { :video => 'true', :embed_code => video.embed_code }}
                     .body
