adds clear div after yielded content area

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,6 +45,7 @@
             %a{:href => '/home/donate'} Donate
     .site-container#main-content
       = yield
+      .clear
 
     = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.13.custom.min.js', 'jquery.cmtextconstrain.js']
 
