--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -71,45 +71,19 @@
 .col-2
   .section
     .container
-      #video_player_container.body
-        - if @selected_video
-          :plain
-            #{@selected_video.embed_code}
-          %p
-            = link_to(@selected_video.show.group_name, @selected_video.show, :class => 'box dark')
-            = @selected_video.show.when.strftime("%m/%d/%Y")
-            = link_to(@selected_video.show.venue.name, @selected_video.show.venue, :class => 'venue-link')
-
-          -# TODO
-          -# should probably load this asynchronously after page load
-          - if @selected_video.show.videos.count > 1
-            %h3 More Videos from this Show
-            %ul#related_videos.inline-list
-              - @selected_video.show.videos.each do |video|
-                %li.container{ :class => (video == @selected_video && 'active') }
-                  %a.block{:href => video.url, :data => { :video => 'true', :embed_code => video.embed_code }}
-                    .body
-                      = image_tag(video.thumbnail.url(:tiny))
-                      .clear
-                      %span.box.block.name= video.title
-
-          %h3 Featured Artists
-          %ul.inline-list
-            - @selected_video.show.performances.each do |performance|
-              %li= link_to("#{performance.artist.name} (#{performance.instrument.present? ? performance.instrument.name : performance.artist.instrument.name})",
-                performance.artist, :class => 'box')
-          
-        - else
-          %p No Video Available
+      - if @selected_video
+        = render :partial => 'application/player', :locals => { :selected_video => @selected_video }
+      - else
+        %p No Video Available
 
   - if @videos.present?
     .section.pl10.pt5
       %h3 More videos featuring this artist:
-    #more_videos.section
-      %ul.inline-list.grid-view
+    .section
+      %ul#more_videos.inline-list.grid-view
         - @videos.each do |video|
           %li.container{:class => cycle('first','','','last')}
-            %a.block{:href => video.url, :data => { :video => 'true', :embed_code => video.embed_code }}
+            %a.block{:href => video.url, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
               .body
                 = image_tag(video.thumbnail.url(:tiny))
                 .clear
