--- a/public/stylesheets/pages/shows.css
+++ b/public/stylesheets/pages/shows.css
@@ -1,12 +1,12 @@
 .jazz.page-shows h3#featured-musicians-title {
   margin-top: 5px; }
-.jazz.page-shows .show-listing a.band,
-.jazz.page-shows .show-listing a.venue,
+.jazz.page-shows .show-listing .band,
+.jazz.page-shows .show-listing .venue,
 .jazz.page-shows .show-listing p.date {
   float: left; }
-.jazz.page-shows .show-listing a.band {
+.jazz.page-shows .show-listing .band {
   margin-right: 6px; }
-.jazz.page-shows .show-listing a.venue {
+.jazz.page-shows .show-listing .venue {
   margin-right: 4px; }
 .jazz.page-shows .show-listing p.date {
   margin-bottom: 0px;
