styles other show videos

--- a/app/views/application/_player.html.haml
+++ b/app/views/application/_player.html.haml
@@ -13,12 +13,13 @@
     %h3 More Videos from this Show
     %ul#related_videos.inline-list
       - show.videos.each do |video|
-        %li.container{ :class => (selected_video == video && 'active') }
-          %a.block{:href => video.url, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
+        %li.container{ :class => (selected_video == video ? 'active' : '') << cycle('','','','last') }
+          %a.block{:href => video.url, :title => video.title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
             .body
               = image_tag(video.thumbnail.url(:tiny))
               .clear
-              %span.box.block.name= video.title
+              %span.box.block.name
+                %span= video.title
 
   %h3 Featured Artists
   %ul.inline-list
