--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
 
   - body_attributes = {:class => @page_class}
   - if @uses_gmap
-    -  body_attributes.merge!({:onload => 'initialize();',:onunload => 'GUnload();'})
+    -  body_attributes.merge!({:onload => 'initializeMap();',:onunload => 'GUnload();'})
 
   %body.jazz{body_attributes}
   
@@ -66,7 +66,7 @@
       %script{:src => "http://maps.google.com/maps/api/js?sensor=false"}
   
       :javascript
-        function initialize() {
+        function initializeMap() {
           var latlng = new google.maps.LatLng(40.724001, -73.992837);
           var myOptions = {
             zoom: 12,
@@ -75,23 +75,23 @@
           };
           var map = new google.maps.Map(document.getElementById("map_canvas"),
               myOptions);
-          
-          var coords = [
-            {lat:40.724001, lng:-73.992837},
-            {lng:-74.000692, lat:40.726422}
-          ];
 
-          $(coords).each(function(c, coord) {
+          var open_infowindow = null;
+          
+          $('[data-latitude][data-longitude]').each(function() {
+            var latitude  = $(this).data('latitude'),
+                longitude = $(this).data('longitude'),
+                name      = $(this).find('.name').text();
+
             var marker = new google.maps.Marker({
-                  position: new google.maps.LatLng(coord.lat,coord.lng),
-                  title:"Hello World!",
-                  icon:"/images/map_point.png"
+              position: new google.maps.LatLng(latitude, longitude),
+              title: name,
+              icon:"/images/map_point.png"
             });
 
             var infowindow = new google.maps.InfoWindow({
-                content: "This is some information about this venue."
+              content: name 
             });
-            
             
             // To add the marker to the map, call setMap();
             marker.setMap(map);  
@@ -99,6 +99,16 @@
             google.maps.event.addListener(marker,'click',function() {
               infowindow.open(map, marker);
             });
+
+            $(this).mouseover(function() {
+              map.setCenter(new google.maps.LatLng(latitude, longitude));
+
+              if(open_infowindow) { open_infowindow.close(); }
+
+              infowindow.open(map, marker);
+              open_infowindow = infowindow;
+            });
+
           });
           
         }
